feat: add e2e api test using cypress

--- a/views/index.html
+++ b/views/index.html
@@ -4,15 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="favicon.png" />
-  <title>Go oAuth2 api demo by dv4all</title>
+  <title>oAuth2 api in Golang by dv4all</title>
 </head>
 <body>
-<h1>Go api demo</h1>
+<h1>oAuth2 API in Golang</h1>
 <section>
   <p>
-    This is Golang api demo.
-    The goal is to use minimum number of third party modules and to program 'bare-metal' as much as possible.
+    Welcome to Golang oAuth2 api server.
+    The server uses minimum number of third party modules.
   </p>
+  <p>Available API points:</p>
+  <ul>
+    <li>login</li>
+    <li>verify</li>
+    <li>users</li>
+  </ul>
 </section>
 </body>
 </html>
